5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1616_2922.log
== TEST (2019-04-01 14:06:04) 
-- CODE:
print(1.042.000,00/1.
		500)
-- ERROR:
File "XXXX", line 1
    print(1.042.000,00/1.
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:06:14) 
-- CODE:
print(1.042.000,00/1.500)
-- ERROR:
File "XXXX", line 1
    print(1.042.000,00/1.500)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:07) 
-- CODE:
t = input(1042.000/1500)
i = ((1.042.000/1.500)1/t)-1
print(round(i,5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000/1.500)1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:48) 
-- CODE:
t = float(input("quanto tempo de investimento?")
i = ((1.042.000/1.500)1/t)-1
print(round(i,5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000/1.500)1/t)-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:03) 
-- CODE:
t = float(input("quanto tempo de investimento?")
i = ((1.042.000,00/1.500,00)1/t)-1
print(round(i,5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000,00/1.500,00)1/t)-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:33:58) 
-- CODE:
t = float(input("quanto tempo de investimento?")
i = ((1.042.000,00/1.500,00)1/t)-1
print(round(i,5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000,00/1.500,00)1/t)-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:36:16) 
-- CODE:
tempo = float(input("qual o tempo de investimento?"))
i = ((Qf/Qo)1/t) - 1
print(round(i, 50))
-- ERROR:
File "XXXX", line 2
    i = ((Qf/Qo)1/t) - 1
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:03) 
-- CODE:
tempo = float(input("qual o tempo de investimento?"))
i = ((1.042.000/1.500)1/t) - 1
print(round(i, 50))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000/1.500)1/t) - 1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:07) 
-- CODE:
tempo = float(input("qual o tempo de investimento?"))
i = ((1.042.000/1.500)1/t) - 1
print(round(i, 50))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000/1.500)1/t) - 1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:16) 
-- CODE:
t = int(input(1.042.000/1.500))
i = ((1.042.000/1.500)1/t) - 1
print(round(i, 50))
-- ERROR:
File "XXXX", line 1
    t = int(input(1.042.000/1.500))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:28) 
-- CODE:
t = int(1.042.000/1.500)
i = ((1.042.000/1.500)1/t) - 1
print(round(i, 50))
-- ERROR:
File "XXXX", line 1
    t = int(1.042.000/1.500)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:04) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = ((1.042.000/1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000/1.500)**1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:31) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = ((1.042.000//1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000//1.500)**1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:44) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = ((1.042.000//1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000//1.500)**1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:02) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = ((1.042.000//1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000//1.500)**1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:38) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = ((1.042.000//1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = ((1.042.000//1.500)**1/t)-1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:49) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = (((1.042.000-1.500)//1.500)**1/t)-1
print(round(i, 5))
-- ERROR:
File "XXXX", line 2
    i = (((1.042.000-1.500)//1.500)**1/t)-1
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:17) 
-- CODE:
t = int(input("qual o tempo de investimento?"))

-- ERROR:
File "XXXX", line 2
    i = (((1.042.000-1.500)//1.500)**1/t)-1
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:51:53) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = (1.042.000/1.500)**1/t - 1

-- EXECUTION TIME:
0.129577
-- ERROR:
  File "/home/codebench/codes/1616/2922/main.py", line 2
    i = (1.042.000/1.500)**1/t - 1
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:56) 
-- CODE:
t = int(input("qual o tempo de investimento?"))
i = (1.042.000/1.500)**1/t - 1

-- ERROR:
File "XXXX", line 2
    i = (1.042.000/1.500)**1/t - 1
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
